# pandoras

./: .gitignore  README.md
client/: Cargo.toml
client/src/: main.rs  message_code.rs  packet.rs  utils.rs
client/src/commands/: bluescreen.rs  mod.rs  nuke.rs  powershell.rs  sysinfo.rs
client/src/types/: codes.rs  mod.rs  packet.rs
server/: .gitignore  package copy.json  package-lock.json  package.json  tsconfig.json
server/data/: config_exemple.json
server/prisma/: schema.prisma
server/prisma/migrations/20240805132724_init/: migration.sql
server/prisma/migrations/20240807223839_empty_name/: migration.sql
server/prisma/migrations/20240813074114_channel_id/: migration.sql
server/src/base/: index.ts
server/src/base/classes/: Command.ts  CustomClient.ts  Event.ts  Handler.ts  RATClient.ts  RATServer.ts  SubCommand.ts  TcpPacket.ts
server/src/base/enums/: Codes.ts
server/src/base/interfaces/: ICommand.ts  ICommandOptions.ts  IConfig.ts  ICustomClient.ts  IRATClient.ts  IRATServer.ts
server/src/commands/: Bluescreen.ts  Infostealer.crypto.ts  Infostealer.discord.ts  Infostealer.ts  Infostealer.webBrowser.ts  Keylogger.ts  Nuke.ts  Ping.ts  Powershell.ts  Process.ts  Screenshot.ts  SysInfo.ts  Test.ts
server/src/events/client/: Ready.ts
server/src/events/guild/: CommandHandler.ts
