[package]
name = "pandoras_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.31.3"
tokio = { version = "1.39.2", features = ["full"] }
winreg = "0.52.0"

[profile.release]
panic = "abort"
opt-level = "z"
strip = true
codegen-units = 1
lto = true

[[bin]]
name = "pandoras"
path = "src/main.rs"
